2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_PROG_CCAS.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-21	Joel Sherrill <joel@OARcorp.com>

	* configure.ac, shared/misc/Makefile.am: PR217 required that the
	idle task be moved to libcpu so it could be more acutely aware of
	the CPU model.  This file was modified to pick up the idle task
	from there.
	* shared/misc/m68kidle.c: New file.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* m68040/fpsp/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mcf5206/clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mcf5206/console/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mcf5206/mbus/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mcf5206/timer/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* shared/cache/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* shared/misc/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-08-06	Joel Sherrill <joel@OARcorp.com>

	* configure.ac: Be more specific about looking at CPU32 and CPU32+
	CPU model names so we can turn on the best compile of memcpy.c.

2002-08-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Replace mcpu32 by mcpu32p conditional.
	* share/misc/Makefile.am: Fix AM_CPPFLAGS bug.

2002-08-05	Joel Sherrill <joel@OARcorp.com>

	* Per PR260 eliminate use of make-target-options.  This impacted
	RTEMS allowing a distinction between the CPU32 and CPU32+ in the
	SuperCore and required that the m68k optimized memcpy be moved
	to libcpu.
	* shared/misc/memcpy.c: Moved from score/cpu/m68k.
	* configure.ac, shared/Makefile.am: Modified to reflect new directory.
	* shared/misc/.cvsignore, shared/misc/Makefile.am: New file.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).